# ml.py

./: .gitignore  pyproject.toml
bandit_methods/: main.py
crossEntropy/: crossEntropy.ipynb
gradient_descent/: cali.ipynb  california_housing.ipynb  main.ipynb  pyproject.toml  test.ipynb
kmeans/: main.py
linear_regression/: main.ipynb
logistic_regression/: main.ipynb
pca/: test.py
random_forest/: main.py
tictactoe_rl/: main.py
weighted_vs_exponential_average/: main.py
